# arxiv_reader

./: .pre-commit-config.yaml  Readme.md  Requirements.txt  pyproject.toml  setup.cfg
arxiv_reader/: cli.py  daily_arxiv.py  latex_utils.py
tests/: maths.tex  maths.txt  test_math_transformation.py
