[metadata]
name = Arxiv Reader
version = 0.0.2
description =  Reads out the Arxiv everyday for you
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/arxiv_reader
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
authors = Corentin Cadiou <c.cadiou@ucl.ac.uk>

[options]
packages = find:
py_modules = arxiv_reader
python_requires = >=3.7.0
install_requires =
    tqdm
    requests
    python-dateutil
    dateparser
    feedgen
    pydub
    arxiv>=1.4.2
    eyed3
include_package_data = True

[options.entry_points]
console_scripts =
    arxiv-reader=arxiv_reader.cli:main

[bdist_wheel]
universal = True

[flake8]
max-line-length = 88
ignore = E203, # Whitespace before ':' (black compat)
    W503, # Line break before binary operator (black compat)
